--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -1,3 +1,45 @@
 .profile-dropdown {
   position: absolute;
 }
+
+.navigation-bar-div {
+  z-index: 1;
+  position: fixed;
+  top: 0;
+  width: 100%;
+ 
+  
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 2px solid black;
+}
+
+.navigation-bar-logo {
+  padding-top: 10px;
+  width: 150px;
+  height: 150px;
+  padding-left: 20px;
+}
+
+.search-bar {
+  border: 2px solid var(--darkOrange);
+  padding: 5px;
+  border-radius: 10px;
+  display: flex;
+  width: 300px;
+}
+
+.search-bar-input {
+  border: none;
+  width: 100%;
+}
+
+.search-bar-input:focus {
+  outline: none;
+}
+
+.fa-searchengin {
+  font-weight: 500;
+}
