--- a/react-vite/src/components/CategoryTile/CategoryCard.css
+++ b/react-vite/src/components/CategoryTile/CategoryCard.css
@@ -1,37 +1,65 @@
-import
-.category-tile {
+
+
+/* .category-container {
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
     position: relative;
+    width: fit-content;
+} */
+
+.background:hover{
+    filter: none;
 }
 
-.category-container  {
-    position: relative;
-   
+.background {
+    z-index: 0;
+    object-fit: contain;
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    filter: blur(2px);
+    min-width: 200px;
+    min-height: 200px;
+    padding: 20px;
+    container: fit-content;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    border: 3px solid var(--darkOrange);
     
-
-    .background {
-        z-index: -1;
-        object-fit: contain;
-        position: absolute;
-        cursor: pointer;
-        top: 0;
-        left: 0;
-        filter: blur(2px);
-        min-width: 200px;
-        min-height: 200px;
-        padding: 20px;
-        container: fit-content;
-        background-size: cover;
-        background-position: center;
-        border-radius: 10px;
-        border: 10px solid var(--darkOrange);
-    }
-  
 }
 
-.category-container:hover{
-    .background {
-        box-shadow: 2px 2px 2px black;
-        
-    }
+.category-tile {
+    z-index: 1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: fit-content;
+    height: 100%;
+    width: 100%;
+    cursor: pointer;
+    filter: none;
+    font-size: x-large;
+    color: var(--darkOrange)
 }
 
+
+.category-name {
+    z-index: 1;
+    margin-top: 10px; 
+    text-align: center;
+    filter: none;
+}
+
+.c-wrap {
+    position: relative;
+    
+}
