--- a/react-vite/src/context/Modal.css
+++ b/react-vite/src/context/Modal.css
@@ -1,12 +1,13 @@
 #modal {
   position: fixed;
-  top: 0;
+  top: 100px;
   right: 0;
   left: 0;
   bottom: 0;
   display: flex;
   justify-content: center;
   align-items: center;
+  
 }
 
 #modal-background {
@@ -21,4 +22,8 @@
 #modal-content {
   position: absolute;
   background-color:white;
+  border-radius: 20px;
+  border: 6px solid var(--darkOrange);
+  display: inline-flex;
+  
 }
