--- a/react-vite/src/components/CategoryTile/CategoryCard.css
+++ b/react-vite/src/components/CategoryTile/CategoryCard.css
@@ -1,15 +1,47 @@
 
-
-/* .category-container {
-    display: inline-block;
+.category-tile {
+    z-index: 0;
+    position: absolute;
+    top: 120px;
+    left: 120px;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    
+    height: 100%;
+    width: 100%;
+    cursor: pointer;
+    filter: none;
+    font-size: x-large;
+    color: var(--darkOrange);
+    box-shadow: 2px 2px 2px black;
+    font-weight: 900;
+    text-shadow:  rgb(255, 255, 255) 0px 0px 5px;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+    
+}
+
+.category-name {
+    z-index: 20;
+    margin-top: 10px; 
+    text-align: center;
+
+}
+.fa-solid {
+    filter: none;
+}
+.c-wrap {
     position: relative;
-    width: fit-content;
-} */
+    filter: none;
+}
 
 .background:hover{
-    filter: none;
+    filter: blur(0px);
+    box-shadow: 2px 2px 2px grey;
 }
 
 .background {
@@ -28,38 +60,6 @@
     background-position: center;
     border-radius: 10px;
     border: 3px solid var(--darkOrange);
-    
-}
-
-.category-tile {
-    z-index: 1;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    width: fit-content;
-    height: 100%;
-    width: 100%;
-    cursor: pointer;
-    filter: none;
-    font-size: x-large;
-    color: var(--darkOrange)
-}
-
-
-.category-name {
-    z-index: 1;
-    margin-top: 10px; 
-    text-align: center;
-    filter: none;
-}
-
-.c-wrap {
-    position: relative;
+    display: block;
     
 }
