--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -38,8 +38,10 @@
   border: 2px solid var(--darkOrange);
   padding: 5px;
   border-radius: 10px;
-  display: flex;
-  width: 400px;
+  display: inline-flex;
+  width: 600px;
+  align-items: center;
+  position: static;
 }
 
 .search-bar:hover {
@@ -49,6 +51,7 @@
 .search-bar-input {
   border: none;
   width: 100%;
+  height: 100%;
 }
 
 .search-bar-input:focus {
@@ -57,11 +60,19 @@
 
 .fa-searchengin {
   font-weight: 500;
+  
+  border-radius: 10px;
+  font-size: x-large;
+  cursor: pointer;
 }
 
 .profile-div {
   display: flex;
-  
+  width: fit-content;
+  margin-right: 20px;
+  border: 1px solid black;
+  padding: 10px;
+  border-radius: 10px;
 }
 
 .login-modal {
@@ -69,3 +80,45 @@
   border-radius: 20px;
   background-color: rgba(245, 199, 39, 0.5);
 }
+
+.logged-out-buttons {
+  width: fit-content;
+  height: fit-content;
+  background: linear-gradient(45deg, red, yellow);
+  padding: 10px;
+  margin: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-weight: 900;
+  border: 2px solid black;
+  
+}
+
+.logged-out-buttons:hover {
+  box-shadow: 3px 3px 3px black;
+  transition: box-shadow 500ms;
+}
+
+.logged-out {
+  display: flex;
+  align-items: center;
+}
+
+.add-spot{
+  width: auto;
+  height: 50px;
+  background: linear-gradient(45deg, red, yellow);
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 10px;
+  border: 2px solid black;
+  font-weight: 700;
+  margin: 10px;
+}
+
+.add-spot:hover {
+  box-shadow: 3px 3px 3px black;
+  transition: box-shadow 500ms;
+}
+
+
