--- a/react-vite/src/components/UploadImages/UploadImages.css
+++ b/react-vite/src/components/UploadImages/UploadImages.css
@@ -1,10 +1,44 @@
 .upload-review-images {
-    background-color: red;
-}
-
-.upload-review-images-title {
-    color: red;
     display: flex;
     flex-direction: column;
-    border: 2px solid orange;
+    align-items: center;
+    text-align: center;
+}
+
+.review-image-container {
+    border: 2px solid red;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.upload-button {
+    margin-top: 20px;
+}
+
+.no-images {
+    margin-top: 20px;
+}
+
+.input {
+    border: 2px solid black;
+}
+
+img {
+    max-width: 150px;
+}
+
+.image-hover-card > p {
+    width: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.image-hover-card {
+    display: flex;
+    flex-direction: column;
 }
