--- a/react-vite/src/components/Form/Input/Input.css
+++ b/react-vite/src/components/Form/Input/Input.css
@@ -1,7 +1,14 @@
 .p-error {
     color: red;
     font-size: 12px;
-    text-shadow: white 1px 0px 10px;
+    text-shadow: rgb(255, 251, 0) 1px 0px 10px;
+    border: 2px solid rgb(0, 0, 0);
+    font-weight: 900;
+    -webkit-text-stroke-width: 0.5px;
+    -webkit-text-stroke-color: rgb(0, 0, 0);
+    background: linear-gradient(45deg, red, yellow);
+    border-radius: 10px;
+    padding: 5px;
 }
 
 .form-input {
@@ -10,4 +17,10 @@
     justify-content: center;
     padding: 5px;
     flex-direction: column;
+    border-radius: 5px;
+}
+
+.form-input-field {
+    border-radius: 5px;
+    
 }
