--- a/react-vite/src/components/Form/Input/Input.css
+++ b/react-vite/src/components/Form/Input/Input.css
@@ -1,10 +1,11 @@
 .p-error {
-    color: red;
+    color: rgb(255, 255, 255);
     font-size: 12px;
     text-shadow: rgb(255, 251, 0) 1px 0px 10px;
     border: 2px solid rgb(0, 0, 0);
     font-weight: 900;
-    -webkit-text-stroke-width: 0.5px;
+    font-size: medium;
+    -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: rgb(0, 0, 0);
     background: linear-gradient(45deg, red, yellow);
     border-radius: 10px;
@@ -21,6 +22,14 @@
 }
 
 .form-input-field {
-    border-radius: 5px;
     
+        resize: none;
+        border-radius: 20px;
+        margin: 15px;
+        padding: 5px;
+ 
+}
+
+.fa-trash {
+    cursor: pointer;
 }
