--- a/react-vite/src/components/LoginFormModal/LoginForm.css
+++ b/react-vite/src/components/LoginFormModal/LoginForm.css
@@ -1,6 +1,31 @@
 .login-modal {
-    border-radius: 20px;
+    
+    background-image: linear-gradient(
+        to bottom,
+        rgba(255, 255, 255, 0.5),
+        rgba(255, 255, 255, 0.5)
+      ), url('https://topspots.s3.us-west-1.amazonaws.com/logo.png');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    height: 300px;
+    
+    align-items: center;
+    
+   
+}
+
+.login-modal form{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+}
+
+.sign-up-button {
+    border-radius: 5px;
+    cursor: pointer;
 }
