--- a/react-vite/src/components/SpotPage/SpotPage.css
+++ b/react-vite/src/components/SpotPage/SpotPage.css
@@ -28,7 +28,7 @@
     align-items: center;
     justify-content: flex-end;
     padding: 10px;
-   
+    gap: 10px;
 }
 
 .add-review {
@@ -44,6 +44,26 @@
 }
 
 .add-review:hover {
+    box-shadow: 2px 2px 2px white;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.24);
+    transition-duration: 500ms;
+    transition-property: background-color;
+}
+
+.update-spot-button {
+    border: 2px solid var(--darkOrange);
+    width: fit-content;
+    padding: 7px 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    align-items: center;
+    display: flex;
+    width: fit-content;
+    height: fit-content;
+}
+
+.update-spot-button:hover {
     box-shadow: 2px 2px 2px white;
     cursor: pointer;
     background-color: rgba(255, 255, 255, 0.24);
@@ -80,6 +100,8 @@
     width: fit-content;
     margin: 10px;
     align-items: center;
+    -webkit-text-stroke: 0.5px navy;
+    
 }
 
 .upload-image-text:hover {
@@ -89,3 +111,57 @@
     transition-duration: 500ms;
     transition-property: background-color;
 }
+
+.review-exists {
+    display: inline-flex;
+    align-items: center;
+    margin: 20px;
+    
+}
+
+.delete-review-spot-page {
+    padding: 10px;
+    font-size: xx-large;
+    color: black;
+    -webkit-text-stroke-width: 0.5px;
+    -webkit-text-stroke-color: var(--darkOrange);
+}
+
+.upload-image-text-text {
+    font-family: "Roboto Condensed", sans-serif;
+    font-weight: 900;
+}
+
+.address-block {
+    display: flex;
+    flex-direction: row;
+}
+
+.phone-block {
+    display: flex;
+    flex-direction: row;
+}
+
+.page-icon {
+    font-size: x-large;
+    color: black;
+    -webkit-text-stroke-width: 0.5px;
+    -webkit-text-stroke-color: var(--darkOrange);
+    
+}
+
+.category {
+    display: inline-flex;
+    align-items: center;
+}
+
+.address-block {
+    display: inline-flex;
+    align-items: center;
+}
+
+.phone-block {
+    display: flex;
+    align-items: center;
+}
+
