--- a/react-vite/src/components/UploadImages/UploadImages.css
+++ b/react-vite/src/components/UploadImages/UploadImages.css
@@ -2,17 +2,32 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(255, 255, 255, 0.5),
+        rgba(255, 255, 255, 0.5)
+      ), url('https://topspots.s3.us-west-1.amazonaws.com/logo.png');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
 }
 
 .review-image-container {
     border: 2px solid red;
     border-radius: 10px;
-    display: flex;
+    display: grid;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin-top: 20px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    background-color: white;
+    margin: 10px;
 }
 
 .upload-button {
@@ -21,6 +36,7 @@
 
 .no-images {
     margin-top: 20px;
+    font-weight: 700;
 }
 
 .input {
@@ -41,4 +57,68 @@ img {
 .image-hover-card {
     display: flex;
     flex-direction: column;
+}
+
+.upload-review-image-header {
+    display: flex;
+    flex-direction: row;
+    
+    justify-content: center;
+    padding: 5px;
+    width: fit-content;
+    font-weight: bold;
+    align-items: center;
+}
+
+.file-input {
+    width: 0;
+    height: 0;
+}
+
+.Add-Images-Button{
+    display: inline-block;
+  background-color: var(--darkOrange);
+  border: 2px solid black;
+  color: #fff; /* Button text color */
+  padding: 10px 20px; /* Adjust padding as needed */
+  border-radius: 5px; /* Adjust border radius as needed */
+  cursor: pointer;
+  text-align: center;
+  margin: 0 auto; /* Center the button horizontally */
+}
+
+.Add-Images-Button:hover{
+    box-shadow: 2px 2px 2px black;
+}
+
+.image-feed-file {
+    cursor: pointer;
+    position: relative;
+    height: calc(450px * 0.49);
+    overflow: hidden;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.image-feed-file > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.file-text {
+    margin-bottom: 10px;
+    border: 20px solid black;
+    font-size: xx-large;
+}
+
+.review-image-container{
+    max-width: 450px;
+    max-height: 450px;
+    border: 1px solid gray;
+    border-radius: 5px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
