--- a/react-vite/src/components/CategoryTile/CategoryCard.css
+++ b/react-vite/src/components/CategoryTile/CategoryCard.css
@@ -37,6 +37,9 @@
 .c-wrap {
     position: relative;
     filter: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .background:hover{
@@ -63,3 +66,15 @@
     display: block;
     
 }
+
+@media only screen and (min-width: 781px) and (max-width: 1184px){
+    .background:nth-child(4){
+        display: inline-flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        padding: 20px;
+        border: 20px solid black;
+    }
+
+}
+
