--- a/react-vite/src/components/LandingPage/LandingPage.css
+++ b/react-vite/src/components/LandingPage/LandingPage.css
@@ -1,5 +1,4 @@
 .landing-page {
-    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,8 +22,8 @@
 .reviews {
     display: flex;
     flex-wrap: wrap;
-    width: 70%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
     flex-direction: row;
     align-items: center;
     justify-content: center;
@@ -37,12 +36,22 @@
     /* flex-wrap: wrap; */
     justify-content: flex-start;
     /* width: 100%; */
-    max-width: 90vw;
+    max-width: 100%;
     /* left: 0%; */
     margin-bottom: 200px;
    gap: 300px;
    margin-right: 250px;
-    
-    
+   
 }
+
+
+@media only screen and (min-width: 499px) and (max-width: 1184px){
+    .categories{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+}
+
+
 
