--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -11,6 +11,7 @@
   
   background-color: white;
   display: inline-flex;
+  flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
@@ -119,6 +120,21 @@
 .add-spot:hover {
   box-shadow: 3px 3px 3px black;
   transition: box-shadow 500ms;
+}
+
+@media only screen and (max-width: 1230px){
+  .navigation-bar-div{
+    flex-direction: column;
+    gap: 10px;
+  }
+  
+  .search-bar{
+    width: 400px;
+  }
+
+  .profile-div{
+    margin: 0;
+  }
 }
 
 
