--- a/react-vite/src/context/Modal.css
+++ b/react-vite/src/context/Modal.css
@@ -30,3 +30,9 @@
   padding: 10px;
   box-shadow: 6px 6px 6px var(--red);
 }
+
+@media only screen and (max-width: 1230px){
+  #modal{
+      top: 400px;
+  }
+}
