--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -13,3 +13,9 @@ html {
 body {
     padding-top: 170px;
 }
+
+@media only screen and (max-width: 1230px){
+    body{
+        padding-top: 320px;
+    }
+}
