--- a/react-vite/src/components/ReviewTile/ReviewTile.css
+++ b/react-vite/src/components/ReviewTile/ReviewTile.css
@@ -85,5 +85,17 @@
 }
 
 .icon {
+    padding-bottom: -50px;
+}
+
+.icon > button {
+    
     cursor: pointer;
+    background-color: transparent;
+    border: none;
+    color: white;
+    font-size: large;
+    font-weight: 700;
+    -webkit-text-stroke: 0.5px black;
+    text-shadow: 1px 1px 2px var(--orange);
 }
