--- a/react-vite/src/components/SingleReview/SingleReview.css
+++ b/react-vite/src/components/SingleReview/SingleReview.css
@@ -15,7 +15,12 @@
 .review-tile-icon {
     /* text-shadow: rgb(255, 0, 0) 1px 0 10px; */
     cursor: pointer;
+    background-color: transparent;
+    border: none;
+    font-weight: 700;
 }
+
+
 
 .r-header-wrap{
     display: inline-flex;
