--- a/react-vite/src/components/SingleReview/SingleReview.css
+++ b/react-vite/src/components/SingleReview/SingleReview.css
@@ -20,7 +20,33 @@
     font-weight: 700;
 }
 
+.follow-user {
+    border: 2px solid var(--orange);
+    display: flex;
+    padding: 2px;
+    border-radius: 5px;
+    box-shadow: 1px 1px 5px 3px rgba(0,0,0,0.75);
+}
 
+.follow-user-button {
+    background-color: none;
+    border: none;
+    color: orange;
+    -webkit-text-stroke: 1px black;
+    cursor: pointer;
+    font-size: large;
+    display: flex;
+    align-items: center;
+}
+
+.follow-user-star {
+    display: flex;
+    align-self: center;
+    font-size: large;
+    color: red;
+    -webkit-text-stroke: 2px black;
+    margin: 0 15px;
+}
 
 .r-header-wrap{
     display: inline-flex;
