--- a/react-vite/src/components/SignupFormPage/SignupForm.css
+++ b/react-vite/src/components/SignupFormPage/SignupForm.css
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     overflow-y: auto;
-    height: 300px;
+    max-height: fit-content;
     
     align-items: center;
     
