--- a/react-vite/src/components/SpotForm/SpotForm.css
+++ b/react-vite/src/components/SpotForm/SpotForm.css
@@ -10,8 +10,8 @@
     display: inline-flex;
     flex-direction: column;
     overflow-y: auto;
-    height: 300px;
-
+    height: 500px;
+    width: 300px;
     
     
 }
@@ -32,12 +32,15 @@
     height: 150px;
     display: inline-flex;
     margin-bottom: 10px;
+    border-radius: 5px;
+    width: 180px;
 }
 
 .spot-form-text-area-wrapper{
     display: flex;
     flex-direction: column;
     align-items: center;
+    
     
 }
 
