--- a/react-vite/src/context/Modal.css
+++ b/react-vite/src/context/Modal.css
@@ -29,6 +29,7 @@
   flex-wrap: wrap;
   padding: 10px;
   box-shadow: 6px 6px 6px var(--red);
+  height: fit-content;
 }
 
 @media only screen and (max-width: 1230px){
